# qqbot-linger

./: .env.sample  .gitignore  README.md  bam.sqlite3  pyproject.toml
qqbot_linger/: main.py
